# openhantek

./: .editorconfig  .travis.yml  CMakeLists.txt  readme.md
cmake/: CPackInfos.cmake  FindFFTW.cmake
docs/: build.md
openhantek/: CMakeLists.txt
openhantek/res/: firmwares.qrc
openhantek/src/: dsowidget.cpp  dsowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp
openhantek/src/configdialog/: DsoConfigAnalysisPage.cpp  DsoConfigColorsPage.cpp
openhantek/src/docks/: HorizontalDock.cpp  HorizontalDock.h
openhantek/src/exporting/: legacyexportdrawer.cpp  legacyexportdrawer.h
openhantek/src/hantekdso/: hantekdsocontrol.cpp  hantekdsocontrol.h
openhantek/src/hantekprotocol/: bulkcode.h
openhantek/src/post/: graphgenerator.cpp
openhantek/src/selectdevice/: deviceslistmodel.cpp  deviceslistmodel.h  rawdeviceslistmodel.cpp  rawdeviceslistmodel.h  selectsupporteddevice.cpp
openhantek/src/usb/: finddevices.cpp  uploadFirmware.cpp  usbdevice.cpp
openhantek/src/utils/: printutils.cpp
openhantek/translations/: CMakeLists.txt  openhantek_de.ts  openhantek_it.ts  openhantek_pt.ts
